# tp4_openCL

./: .gitignore
VectorAdd/: VectorAdd.cpp
tp4/: CMakeLists.txt  README  main.cpp
tp4-openacc/: CMakeLists.txt  README  main.cpp
tp4-opencl/: CMakeLists.txt  GaussJordan.cl  README  VectorAdd.cl  gauss_jordan.cl  main.cpp
